--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -1,19 +1,182 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-
-  <title>{ifset title}{include title|stripHtml} | {/ifset}Nette Web</title>
-</head>
-
-<body>
-  <div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
-
-  {include content}
-
-  {block scripts}
-  <script src="https://nette.github.io/resources/js/3/netteForms.min.js"></script>
-  {/block}
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{ifset title}{include title|stripHtml} | {/ifset}Admin Panel</title>
+    <!-- Google Font: Source Sans Pro -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"> -->
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Theme style -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/3.1.0/css/adminlte.min.css" integrity="sha512-mxrUXSjrxl8vm5GwafxcqTrEwO1/oBNU25l20GODsysHReZo4uhVISzAKzaABH6/tTfAxZrY2FprmeAP5UZY8A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  </head>
+  <style>
+    body {
+      font-family: 'DM Mono', monospace;
+    }
+  </style>
+  <body class="hold-transition layout-top-nav dark-mode">
+    <div class="wrapper">
+      <!-- Navbar -->
+      <nav class="main-header navbar navbar-expand-md navbar-dark">
+        <div class="container">
+          <a n:href="Homepage:" class="navbar-brand">
+            <span class="brand-text font-weight-light">GingTeam</span>
+          </a>
+          <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse order-3" id="navbarCollapse">
+            <!-- Left navbar links -->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a n:href="this" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">
+                  Dropdown
+                </a>
+                <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
+                  <li><a href="#" class="dropdown-item">Some other action</a></li>
+                  <li class="dropdown-divider"></li>
+                  <!-- Level two dropdown-->
+                  <li class="dropdown-submenu dropdown-hover">
+                    <a id="dropdownSubMenu2" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle">Hover for action</a>
+                    <ul aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
+                      <li>
+                        <a tabindex="-1" href="#" class="dropdown-item">level 2</a>
+                      </li>
+                      <!-- Level three dropdown-->
+                      <li class="dropdown-submenu">
+                        <a id="dropdownSubMenu3" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle">level 2</a>
+                        <ul aria-labelledby="dropdownSubMenu3" class="dropdown-menu border-0 shadow">
+                          <li><a href="#" class="dropdown-item">3rd level</a></li>
+                          <li><a href="#" class="dropdown-item">3rd level</a></li>
+                        </ul>
+                      </li>
+                      <!-- End Level three -->
+                      <li><a href="#" class="dropdown-item">level 2</a></li>
+                      <li><a href="#" class="dropdown-item">level 2</a></li>
+                    </ul>
+                  </li>
+                  <!-- End Level two -->
+                </ul>
+              </li>
+            </ul>
+            <!-- SEARCH FORM -->
+            <form class="form-inline ml-0 ml-md-3">
+              <div class="input-group input-group-sm">
+                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <div class="input-group-append">
+                  <button class="btn btn-navbar" type="submit">
+                  <i class="fas fa-search"></i>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- Right navbar links -->
+          <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
+            <!-- User -->
+            {if $user->isLoggedIn()}
+            <li class="nav-item dropdown">
+              <a class="nav-link" data-toggle="dropdown" href="#">
+              <i class="far fa-user"></i>
+              </a>
+              <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                <div class="dropdown-item">
+                  <div class="media">
+                    <img src="{$user->getIdentity()->photo}" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                    <div class="media-body">
+                      <h3 class="dropdown-item-title">
+                        {$user->getIdentity()->name}
+                      </h3>
+                      <p class="text-sm">
+                        Roles: <span class="badge badge-success" n:foreach="$user->getRoles() as $role">
+                          {$role}
+                        </span>
+                      </p>
+                      <p class="text-sm text-muted">
+                        <i class="fab fa-facebook"></i> {$user->getIdentity()->facebook_id}
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a n:href="Sign:out" class="dropdown-item dropdown-footer">
+                  <i class="fa fa-sign-out-alt"></i> Logout
+                </a>
+              </div>
+            </li>
+            {else}
+            <li class="nav-item">
+              <a n:href="Sign:in" class="nav-link">
+                <i class="fa fa-sign-in-alt"></i> Login
+              </a>
+            </li>
+            {/if}
+          </ul>
+        </div>
+      </nav>
+      <!-- /.navbar -->
+      <!-- Content Wrapper. Contains page content -->
+      <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <div class="content-header">
+          <div class="container">
+            <div class="row mb-2">
+              <div class="col-sm-6">
+                <h1 class="m-0">Dashboard</h1>
+              </div>
+              <!-- /.col -->
+              <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                  <li class="breadcrumb-item"><a href="#">Home</a></li>
+                  <li class="breadcrumb-item active">Dashboard</li>
+                </ol>
+              </div>
+              <!-- /.col -->
+            </div>
+            <!-- /.row -->
+          </div>
+          <!-- /.container-fluid -->
+        </div>
+        <!-- /.content-header -->
+        <!-- Main content -->
+        <div class="content">
+          <div class="container">
+              <div n:foreach="$flashes as $flash" class="callout callout-{$flash->type}">{$flash->message}</div>
+              {include content}
+          </div>
+          <!-- /.container-fluid -->
+        </div>
+        <!-- /.content -->
+      </div>
+      <!-- /.content-wrapper -->
+      <!-- Main Footer -->
+      <footer class="main-footer">
+        <!-- To the right -->
+        <div class="float-right d-none d-sm-inline">
+          <i class="fas fa-user-secret"></i> GingTeam
+        </div>
+        <!-- Default to the left -->
+        <strong>Copyright &copy; 2021 NSFW.</strong> All rights reserved.
+      </footer>
+    </div>
+    <!-- ./wrapper -->
+    {block scripts}
+      <!-- REQUIRED SCRIPTS -->
+      <!-- jQuery -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <!-- Bootstrap 4 -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js" integrity="sha512-XKa9Hemdy1Ui3KSGgJdgMyYlUg1gM+QhL6cnlyTe2qzMCYm4nAZ1PsVerQzTTXzonUR+dmswHqgJPuwCq1MaAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <!-- AdminLTE App -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/3.1.0/js/adminlte.min.js" integrity="sha512-AJUWwfMxFuQLv1iPZOTZX0N/jTCIrLxyZjTRKQostNU71MzZTEPHjajSK20Kj1TwJELpP7gl+ShXw5brpnKwEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="https://nette.github.io/resources/js/3/netteForms.min.js"></script>
+    {/block}
+  </body>
 </html>
